--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,13 @@
 {
-  "buildCommand": "prisma generate && next build",
+  "version": 2,
+  "buildCommand": "npm run build",
   "installCommand": "npm install",
   "framework": "nextjs",
   "outputDirectory": ".next",
   "regions": ["iad1"],
   "env": {
-    "NEXTAUTH_URL": "https://${VERCEL_URL}",
-    "NEXTAUTH_SECRET": "${NEXTAUTH_SECRET}",
+    "NEXTAUTH_URL": "https://my-app-hotaqs-projects.vercel.app",
+    "NEXTAUTH_SECRET": "your-nextauth-secret",
     "DATABASE_URL": "${DATABASE_URL}",
     "GOOGLE_CLIENT_ID": "${GOOGLE_CLIENT_ID}",
     "GOOGLE_CLIENT_SECRET": "${GOOGLE_CLIENT_SECRET}",
