fix error when deploy

--- a/.env.example
+++ b/.env.example
@@ -10,7 +10,8 @@ GOOGLE_CLIENT_ID=your-google-client-id
 GOOGLE_CLIENT_SECRET=your-google-client-secret
 FACEBOOK_CLIENT_ID=your-facebook-client-id
 FACEBOOK_CLIENT_SECRET=your-facebook-client-secret
-
+EDGE_STORE_ACCESS_KEY="xS0zKPdhRDn6xcTc01ncdm1S4nGMWVzA"
+EDGE_STORE_SECRET_KEY="6jzepoThSlOqfmb9yGhydaq2Jot6roGYggZfkuMmhHDqhNki"
 # Email (SMTP)
 SMTP_HOST=smtp.example.com
 SMTP_PORT=587
