--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
-DATABASE_URL="postgresql://neondb_owner:npg_0gNzs1dPUvTF@ep-dry-cake-a8zunxhe-pooler.eastus2.azure.neon.tech/neondb?sslmode\=require"
+DATABASE_URL="postgresql://neondb_owner:npg_0gNzs1dPUvTF@ep-dry-cake-a8zunxhe-pooler.eastus2.azure.neon.tech/neondb?sslmode=require"
 
 # NextAuth
 NEXTAUTH_URL="https://my-app-hotaqs-projects.vercel.app"
