--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "postinstall": "prisma generate",
-    "deploy": "node scripts/deploy-vercel.js"
+    "deploy": "node scripts/deploy-vercel.js",
+    "deploy:new": "node scripts/deploy-vercel-new.js"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.8.0",
