--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "node scripts/build.js",
+    "prisma:generate": "prisma generate",
+    "build": "npm run prisma:generate && node scripts/build.js",
     "start": "next start",
     "lint": "next lint",
     "postinstall": "prisma generate",
