--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,4 @@
+
+EDGE_STORE_ACCESS_KEY=xS0zKPdhRDn6xcTc01ncdm1S4nGMWVzA
+EDGE_STORE_SECRET_KEY=6jzepoThSlOqfmb9yGhydaq2Jot6roGYggZfkuMmhHDqhNki
 DATABASE_URL=postgresql://neondb_owner:npg_0gNzs1dPUvTF@ep-dry-cake-a8zunxhe-pooler.eastus2.azure.neon.tech/neondb?sslmode=require
