--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,16 @@
+# Database
+DATABASE_URL="postgresql://neondb_owner:npg_HL4UfuYA8lpJ@ep-super-breeze-a1ggrbbp-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require"
 
-EDGE_STORE_ACCESS_KEY=xS0zKPdhRDn6xcTc01ncdm1S4nGMWVzA
-EDGE_STORE_SECRET_KEY=6jzepoThSlOqfmb9yGhydaq2Jot6roGYggZfkuMmhHDqhNki
-DATABASE_URL=postgresql://neondb_owner:npg_0gNzs1dPUvTF@ep-dry-cake-a8zunxhe-pooler.eastus2.azure.neon.tech/neondb?sslmode=require
+# NextAuth
+NEXTAUTH_URL="https://my-app-hotaqs-projects.vercel.app"
+NEXTAUTH_SECRET="your-nextauth-secret"
+
+# EdgeStore
+EDGE_STORE_ACCESS_KEY="xS0zKPdhRDn6xcTc01ncdm1S4nGMWVzA"
+EDGE_STORE_SECRET_KEY="6jzepoThSlOqfmb9yGhydaq2Jot6roGYggZfkuMmhHDqhNki"
+
+# OAuth Providers
+GOOGLE_CLIENT_ID="your-google-client-id"
+GOOGLE_CLIENT_SECRET="your-google-client-secret"
+FACEBOOK_CLIENT_ID="your-facebook-client-id"
+FACEBOOK_CLIENT_SECRET="your-facebook-client-secret"
