--- a/package.json
+++ b/package.json
@@ -13,7 +13,12 @@
     "deploy:new": "node scripts/deploy-vercel-new.js",
     "deploy:vercel": "node scripts/deploy-to-vercel.js",
     "deploy:simple": "node scripts/deploy-simple.js",
-    "db:migrate": "node scripts/migrate-db.js"
+    "deploy:full": "node scripts/deploy-full.js",
+    "deploy:win": "node scripts/deploy-windows.js",
+    "db:migrate": "node scripts/migrate-db.js",
+    "db:init": "node scripts/init-db-vercel.js",
+    "db:create-schema": "node scripts/create-schema.js",
+    "vercel:env": "node scripts/vercel-env-setup.js"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.8.0",
@@ -30,6 +35,7 @@
     "next": "15.2.2",
     "next-auth": "^4.24.11",
     "nodemailer": "^6.10.0",
+    "pg": "^8.11.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
@@ -45,6 +51,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.17",
+    "@types/pg": "^8.10.9",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
