--- a/.env.production
+++ b/.env.production
@@ -3,11 +3,11 @@ DATABASE_URL="postgresql://neondb_owner:npg_HL4UfuYA8lpJ@ep-super-breeze-a1ggrbb
 
 # NextAuth
 NEXTAUTH_URL="https://my-app-hotaqs-projects.vercel.app"
-NEXTAUTH_SECRET="your-nextauth-secret"
+NEXTAUTH_SECRET="2d25e4b8c6a9f7d3e1c0b5a8d7f4e1c0b5a8d7f4e1c0b5a8d7f4e1c0"
 
 # EdgeStore
-EDGE_STORE_ACCESS_KEY="xS0zKPdhRDn6xcTc01ncdm1S4nGMWVzA"
-EDGE_STORE_SECRET_KEY="6jzepoThSlOqfmb9yGhydaq2Jot6roGYggZfkuMmhHDqhNki"
+EDGE_STORE_ACCESS_KEY="Den3oxUwsX7QcmahFdTlNMBlxcfmCvgV"
+EDGE_STORE_SECRET_KEY="UrTx43v5FYFKkztSbRBz0iiPC3803C4qTLnG49Ae0g3SOTw5"
 
 # OAuth Providers
 GOOGLE_CLIENT_ID="your-google-client-id"
