--- a/.env.vercel
+++ b/.env.vercel
@@ -1,1 +1,3 @@
 DATABASE_URL=postgresql://neondb_owner:npg_HL4UfuYA8lpJ@ep-super-breeze-a1ggrbbp-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require
+EDGE_STORE_ACCESS_KEY=Den3oxUwsX7QcmahFdTlNMBlxcfmCvgV
+EDGE_STORE_SECRET_KEY=UrTx43v5FYFKkztSbRBz0iiPC3803C4qTLnG49Ae0g3SOTw5
