--- a/package.json
+++ b/package.json
@@ -34,6 +34,15 @@
     "@edgestore/server": "^0.3.3",
     "@neondatabase/serverless": "^0.10.4",
     "@prisma/client": "^6.5.0",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-progress": "^1.1.2",
+    "@radix-ui/react-select": "^2.1.6",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.1.3",
+    "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-toast": "^1.1.5",
+    "@radix-ui/react-tooltip": "^1.1.8",
     "@uploadthing/react": "^7.3.0",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.1",
@@ -67,6 +76,7 @@
     "eslint-config-next": "15.2.2",
     "prisma": "^6.5.0",
     "tailwindcss": "^4",
+    "tsx": "^4.19.3",
     "typescript": "^5"
   }
 }
