--- a/package.json
+++ b/package.json
@@ -35,10 +35,11 @@
     "@neondatabase/serverless": "^0.10.4",
     "@prisma/client": "^6.5.0",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-progress": "^1.1.2",
     "@radix-ui/react-select": "^2.1.6",
-    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-switch": "^1.1.3",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
@@ -47,6 +48,7 @@
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.18.2",
     "lucide-react": "^0.482.0",
@@ -56,9 +58,11 @@
     "pg": "^8.11.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-dropzone": "^14.3.8",
     "react-hot-toast": "^2.5.2",
     "recharts": "^2.15.1",
-    "tailwind-merge": "^3.0.2",
+    "sonner": "^2.0.3",
+    "tailwind-merge": "^3.1.0",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^7.5.2",
     "zod": "^3.24.2"
